@@ -4,7 +4,7 @@
   <Summary xml:lang="it">Mostra l'ora, punta la sveglia e scrive promemoria</Summary>
   <About xml:lang="en">
     <Purpose>Alarm clock</Purpose>
-    <Version>1.9.2 (31-Mar-2003)</Version>
+    <Version>1.9.3 (26-Jul-2003)</Version>
     <Author>Thomas Leonard</Author>
     <License>GNU General Public License</License>
     <Homepage>http://rox.sourceforge.net</Homepage>
